--- a/ContactsManager.UI/appsettings.json
+++ b/ContactsManager.UI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefautConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ContactsDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DefautConnection": "Data Source=TUF-DASH-F15\\SQLSERVER;Initial Catalog=Contacts;Integrated Security=True;Trust Server Certificate=True"
   },
   "Serilog": {
     "MinimumLevel": "Information",
@@ -19,6 +19,11 @@
         "Name": "Console"
       }
     ]
+  },
+  "EPPlus": {
+    "ExcelPackage": {
+      "LicenseContext": "NonCommercial"
+    }
   }
 
 }
